Update CV, fix overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,9 @@
 * {
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 
 .light-bg {
   background-color: $white;
